--- a/偷看漫画.html
+++ b/偷看漫画.html
@@ -38,16 +38,20 @@
     
 </head>
 <body>
-<!-- <img src="http://pic.fxdm.cc/tu/12/第4卷/29.jpg2" alt=""> -->
-<a href="#" id="prevPage" style="cursor: pointer;">上10页</a>
+<div>
+	字符串解析类型（未实现）
+	<select name="" id="">
+		<option value="omanhua">http://www.omanhua.com 哦漫画 http://pic.fxdm.cc/tu/12/第${section}话/${index}+'.jpg'</option>
+	</select>
+</div>
+<a href="#" id="prevPage" style="cursor: pointer;">上200页</a>
 <div class="boxlayer">
 <iframe src="https://www.gcy168.com/" frameborder="0"></iframe>
 </div>
-<!-- <img src="http://pic.fxdm.cc/tu/12/第13卷/0.jpg" alt=""> -->
 <div id="image_wrap">
 	
 </div>
-<a href="#" id="nextPage" style="cursor: pointer;">下10页</a>
+<a href="#" id="nextPage" style="cursor: pointer;">下200页</a>
 
 <script >
 
@@ -190,13 +194,19 @@ function newImage(url){
 				alert('seciton_start未知类型')
 				return
 			}
-		}else{
+		}else if(typeof section_start === 'string'){
+			for (var i2 = 0;i2<page_number;i2++) {
+				var index = i2
+				array.push(stringComb(section_start,index))
+			}
+		}
+		else{
 			alert('seciton_start未知类型')
 			return
 		}
 		return array
 	}
-	var imgUrlArray = urlArray([162,165])
+	var imgUrlArray = urlArray('166话-第170')
 </script>
 </body>
 </html>
