--- a/偷看漫画.html
+++ b/偷看漫画.html
@@ -206,7 +206,7 @@ function newImage(url){
 		}
 		return array
 	}
-	var imgUrlArray = urlArray('166话-第170')
+	var imgUrlArray = urlArray([171,175])
 </script>
 </body>
 </html>
