--- a/偷看漫画.html
+++ b/偷看漫画.html
@@ -157,7 +157,7 @@ function newImage(url){
 		var array = []
 		var page_number = 25
 		var section_number = 100
-
+		// http://www.ikanman.com/comic/5060/ 齐木楠雄的灾难
 		function stringComb(section,index){
 			return `http://pic.fxdm.cc/tu/12/第${section}话/${index}`+'.jpg'
 		}
